[tool.poetry]
name = "mitm-cs"
version = "0.1.0"
description = "Master's in Information Technology - Cyber Security tools"
authors = ["Justin G. Mitchell <jgmitchell@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
plotly = "^5.3.1"
yfinance = "^0.1.63"
matplotlib = "^3.4.3"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
